--- a/AI Distillation/introduction.tex
+++ b/AI Distillation/introduction.tex
@@ -173,8 +173,8 @@ The project is conducted independently and does not form part of any department 
   			\item T2.1: Apply post-training INT8 quantization to the LoRA-tuned model.
   			\item T2.2: Design and execute a final, comprehensive benchmarking script to evaluate all model versions on accuracy, size, latency, and FLOPs.
   			\item T2.3: Generate all tables and visualizations for the results chapter.
-  			\item T2.4: Analyze knowledge transfer from an information-theoretic perspective.
-  			\item T2.5: Define and describe how the pipeline can be extended for Federated Edge Learning.
+  			%\item T2.4: Analyze knowledge transfer from an information-theoretic perspective.
+  			%\item T2.5: Define and describe how the pipeline can be extended for Federated Edge Learning.
   		\end{itemize}
   	\end{itemize}
   	\item WP3: Project Management \& Thesis Writing
@@ -194,7 +194,6 @@ The project is conducted independently and does not form part of any department 
   		\end{itemize}
   	\end{itemize} 	
   \end{itemize}
-  
   %Below is the Gantt diagram with the timeline of the project.
   %Normally the figures and tables are put in \verb|\figure| and \verb|\table| environments, that can float freely in the document. You can identify each float with a \verb|\label|
 \fi
