--- a/AI Distillation/results.tex
+++ b/AI Distillation/results.tex
@@ -14,7 +14,7 @@
   
 \else
   \chapter{Results}
-  This chapter should encompass your data analysis and findings. Additionally, include relevant tables, figures, and citations to support your results and interpretations. Here is a suggested list of topics to discuss:
+  This chapter outlines the experimental setup used to train and evaluate the model. 
   
     \section{Experiments and Tests}
     Describe the experiments conducted to assess the performance of your project. Explain how you collected and processed the data.
